--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,9 @@
 spring:
+  data:
+    mongodb:
+      database: LiveSpider
+      host: localhost
+      port: 27017
   profiles:
     active: development
   thymeleaf:
