--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     compile group: 'org.webjars.bower', name: 'sockjs-client', version: '1.1.5'
     compile group: 'org.webjars.bower', name: 'stomp-websocket', version: '2.3.4'
 
+    // selenium-java
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.14.0'
+
     // https://mvnrepository.com/artifact/org.json/json
     compile group: 'org.json', name: 'json', version: '20180130'
 
