--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,11 @@ dependencies {
     // https://mvnrepository.com/artifact/org.json/json
     compile group: 'org.json', name: 'json', version: '20180130'
 
+    // https://mvnrepository.com/artifact/org.yaml/snakeyaml
+    compile group: 'org.yaml', name: 'snakeyaml', version: '1.21'
+
+    optional group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: '2.0.0.RELEASE'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
