--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 spring:
   profiles:
-#    active: development
-    active: production
+    active: development
+#    active: production
   data:
     mongodb:
       database: LiveSpider
@@ -30,3 +30,8 @@ server:
     context-path: /LiveSpider
 logging:
   config: classpath:log4j2.xml
+
+huya:
+  YY_ID: 1656777876
+  PASSWORD: gdy19941231
+  COOKIE_IN_REDIS: loginCookie_1656777876
