--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,13 +1,11 @@
 spring:
   data:
     mongodb:
-      database: LiveSpider
-      host: localhost
-      port: 27017
+      uri: mongodb://letcafe:19941231@letcafe.cn:27017/LiveSpider
   redis:
-    host: localhost
-    port: 6379
+    host: letcafe.cn
+    port: 8479
     password: redisServer
 huya:
-  CHROME_DRIVER_LOCATION: /usr/bin/chromedriver
+  CHROME_DRIVER_LOCATION: /home/tank/chrome/chromedriver
   SYSTEM_IS_OPEN_GUI: false
