--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 spring:
   profiles:
-    active: dev
-#    active: prod
+#    active: dev
+    active: prod
   thymeleaf:
     prefix: classpath:/templates/
     suffix: .html
