--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,10 @@ dependencies {
     // https://mvnrepository.com/artifact/org.yaml/snakeyaml
     compile group: 'org.yaml', name: 'snakeyaml', version: '1.21'
 
-    optional group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: '2.0.0.RELEASE'
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.2'
+
+//    optional group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: '2.0.0.RELEASE'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
