--- a/.gitignore
+++ b/.gitignore
@@ -4,19 +4,7 @@
 .idea/dataSources/
 .idea/workspace.xml
 build/
-logs/LiveSpider/2018-08/error-2018-08-10-1.log
-logs/LiveSpider/2018-08/error-2018-08-26-1.log
-logs/LiveSpider/2018-08/error-2018-08-27-1.log
-logs/LiveSpider/2018-08/error-2018-08-30-1.log
-logs/LiveSpider/2018-08/info-2018-08-10-1.log
-logs/LiveSpider/2018-08/info-2018-08-26-1.log
-logs/LiveSpider/2018-08/info-2018-08-27-1.log
-logs/LiveSpider/2018-08/info-2018-08-30-1.log
-logs/LiveSpider/2018-08/warn-2018-08-10-1.log
-logs/LiveSpider/2018-08/warn-2018-08-26-1.log
-logs/LiveSpider/2018-08/warn-2018-08-27-1.log
-logs/LiveSpider/2018-08/warn-2018-08-30-1.log
-logs/LiveSpider/2018-09/
+logs/
 out/
 src/main/resources/static/audio/
 src/main/resources/static/video/
