--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ configure(allprojects) {
 
 dependencies {
     // SpringBoot support : WEB
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: '2.0.0.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.0.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.0.0.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '2.0.0.RELEASE'
@@ -69,6 +70,9 @@ dependencies {
     // sockjs-client
     compile group: 'org.webjars.bower', name: 'sockjs-client', version: '1.1.5'
     compile group: 'org.webjars.bower', name: 'stomp-websocket', version: '2.3.4'
+
+    // AspectJ
+    compile group: 'org.aspectj', name: 'aspectjrt', version: '1.9.1'
 
     // selenium-java
     compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.14.0'
