update most YAML files for future configuration convenience
Signed-off-by: dell <letcafe@outlook.com>

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@ logs/
 out/
 src/main/resources/static/audio/
 src/main/resources/static/video/
-src/main/resources/application-tjprod.yaml
+src/main/resources/*-dev.yaml
+src/main/resources/*-tjprod.yaml
