--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,14 +1,10 @@
 spring:
   datasource:
+    type: com.zaxxer.hikari.HikariDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/live_spider?serverTimezone=GMT%2B8&useSSL=false&useUnicode=true&character_set_server=utf8mb4&&characterEncoding=utf-8
     username: root
     password: 123456
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    dbcp2:
-      max-idle: 6
-      min-idle: 2
-      initial-size: 10
-      default-auto-commit: true
   data:
     mongodb:
       database: LiveSpider
