--- a/src/main/resources/huya.yaml
+++ b/src/main/resources/huya.yaml
@@ -4,8 +4,8 @@ huya:
   # 虎牙登录密码
   PASSWORD: gdy19941231
   # ChromeDriver解压位置
-#  CHROME_DRIVER_LOCATION: C:\\Program Files (x86)\\Google\\Chrome\\Application\\chromedriver.exe # Windows
-  CHROME_DRIVER_LOCATION: /home/tank/chrome/chromedriver # Linux
+  CHROME_DRIVER_LOCATION: C:\\Program Files (x86)\\Google\\Chrome\\Application\\chromedriver.exe # Windows
+#  CHROME_DRIVER_LOCATION: /home/tank/chrome/chromedriver # Linux
   SYSTEM_IS_OPEN_GUI: false
   COOKIE_IN_REDIS: loginCookie:${huya.YY_ID}
   task:
