--- a/build.gradle
+++ b/build.gradle
@@ -92,6 +92,9 @@ dependencies {
     // Lombok
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.2'
 
+    // cglib
+    compile group: 'cglib', name: 'cglib', version: '3.2.10'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
