--- a/src/main/resources/huya.yaml
+++ b/src/main/resources/huya.yaml
@@ -1,18 +1,20 @@
 huya:
   # 虎牙登录账号/手机号
-  YY_ID: ***
+  YY_ID: 1656777876
   # 虎牙登录密码
-  PASSWORD: ***
+  PASSWORD: gdy19941231
   # ChromeDriver解压位置
   # Windows Chrome
   BROWSER_TYPE: chrome
+#  BROWSER_BINARY_LOCATION: /opt/google/chrome/chrome
   BROWSER_BINARY_LOCATION: C:\Program Files (x86)\Google\Chrome\Application\chrome.exe
   BROWSER_DRIVER_LOCATION: C:\Program Files (x86)\Google\Chrome\Application\chromedriver.exe
   # Windows Firefox
 #  BROWSER_TYPE: firefox
 #  BROWSER_BINARY_LOCATION: /usr/bin/firefox
 #  BROWSER_DRIVER_LOCATION: /home/chinanet/driver/geckodriver
-  SYSTEM_IS_OPEN_GUI: false
+#  BROWSER_DRIVER_LOCATION: /usr/bin/chromedriver
+  SYSTEM_IS_OPEN_GUI: true
   COOKIE_IN_REDIS: loginCookie:${huya.YY_ID}
   task:
     worker:
