--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -4,7 +4,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/live_spider?serverTimezone=GMT%2B8&useSSL=false&useUnicode=true&character_set_server=utf8mb4&&characterEncoding=utf-8
     username: livespider
-    password: 123456
+    password: Aa987654321
   data:
     mongodb:
       database: LiveSpider
